[package]
name = "async_client"
version = "0.1.0"
authors = ["Simon Pannek <simon.pannek@tum.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.5.0", features = ["rt", "rt-multi-thread", "net", "io-util", "io-std", "macros"] }
