[package]
name = "warp"
version = "0.1.0"
authors = ["Simon Pannek <simon.pannek@tum.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.5.0", features = ["rt", "rt-multi-thread", "macros"] }
warp = "0.3.1"
serde = { version = "1.0.126", features = ["derive"] }
